services and functional error handling

--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
 		"test:service:brands": "jest --verbose --detectOpenHandles services/brands",
 		"test:service:discounts": "jest --verbose --detectOpenHandles services/discounts",
 		"test:service:images": "jest --verbose --detectOpenHandles services/productImages",
+		"test:service:users": "jest --verbose --detectOpenHandles services/users",
+		"test:service:addresses": "jest --verbose --detectOpenHandles services/addresses",
+		"test:service:reviews": "jest --verbose --detectOpenHandles services/reviews",
+		"test:service:shoppingCarts": "jest --verbose --detectOpenHandles services/shoppingCarts",
+		"test:service:wishLists": "jest --verbose --detectOpenHandles services/wishLists",
+		"test:service:purchases": "jest --verbose --detectOpenHandles services/purchases",
+		"test:service:categories": "jest --verbose --detectOpenHandles services/categories",
 		"dev": "nodemon -r dotenv/config src/index.js dotenv_config_path=environments/.env.development",
 		"start": "node -r dotenv/config src/index.js dotenv_config_path=environments/.env.production",
 		"lint": "eslint",
