--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"jest": "^28.1.3",
+		"joi": "^17.6.0",
 		"pg": "^8.8.0",
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.21.4",
