add an watch in the scripts of the tests

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest --detectOpenHandles",
-		"test:models": "jest --verbose --detectOpenHandles models/",
-		"test:routes": "jest --verbose --detectOpenHandles routes/",
-		"test:services": "jest --verbose --detectOpenHandles services/",
+		"test": "jest --detectOpenHandles --watchAll",
+		"test:models": "jest --verbose --detectOpenHandles models/ --watchAll",
+		"test:routes": "jest --verbose --detectOpenHandles routes/ --watchAll",
+		"test:services": "jest --verbose --detectOpenHandles services/ --watchAll",
 		"dev": "nodemon -r dotenv/config src/index.js dotenv_config_path=environments/.env.development",
 		"start": "node -r dotenv/config src/index.js dotenv_config_path=environments/.env.production",
 		"lint": "eslint",
